fix : footer overlapping with content rectified

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,6 @@ font-size: 16px;
 }
 
 .txt-output {
-    
     padding-top: 35px;
     padding-bottom: 10px;
 }
@@ -55,7 +54,7 @@ font-size: 16px;
     border : 1px solid black;
     background-color:white;
     color : black;
-    text-align: left;
+    text-align: center;
     font-weight: lighter;
 }
 
@@ -76,13 +75,21 @@ header {
 footer {
     border: 1px solid black;
     bottom: 0; 
-    width: 100%;
+    width: 100%; 
     overflow: hidden;
-    position: relative;
-    color : black;
-    margin-top : 20px;
+    position: absolute;
+    margin-top: auto;
 
 }
+#page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+  }
+  
 
 
    ul {
